[package]
name = "eyhv"
version = "0.1.0"
authors = ["asrcpq <asrcpq@gmail.com>"]
edition = "2018"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx", "mixer"]

[dependencies]
derive_more = "0.99.0"
lazy_static = "1.4.0"
rand = "0.7"
rand_pcg = "0.2.1"
dyn-clone = "1.0.1"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
